# o1js-to-zkvm

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  cli.yml  lint.yml
crates/o1-verifier/: Cargo.toml  build.rs
crates/o1-verifier-host/: Cargo.toml
crates/o1-verifier-host/src/: main.rs
crates/o1-verifier/src/: main.rs
crates/pickles-verifier/: Cargo.toml
crates/pickles-verifier/src/: convert.rs  deferred.rs  lib.rs  precompile_msm.rs  serialize.rs  types.rs  wire.rs
docs/: build-proj-and-run-e2e.md  pasta-msm-precompile-poc.md
fixtures/mainnet-blockchain-snark/: app_statement.json  proof.serde.json  public_input_skeleton.json  vk.serde.json
fixtures/simplechain/wrap0/: proof.serde.json  public_input_skeleton.json
fixtures/simplechain/wrap1/: proof.serde.json  public_input_skeleton.json  vk.serde.json
fixtures/simplechain/wrap2/: proof.serde.json  public_input_skeleton.json
fixtures/treeproofreturn/wrap0/: proof.serde.json  public_input_skeleton.json
fixtures/treeproofreturn/wrap1/: proof.serde.json  public_input_skeleton.json
fixtures/treeproofreturn/wrap2/: proof.serde.json  public_input_skeleton.json  vk.serde.json
scripts/: rust-e2e-test-profile.sh  rust-e2e-test.sh  rust-prove.sh
src/: cli.ts  cube-root.ts  o1js-internal.ts
test/: cube-root.test.ts
