[workspace]
resolver = "2"
members = ["crates/o1-verifier", "crates/o1-verifier-host", "crates/pickles-verifier"]
exclude = ["mina/src/lib/crypto/proof-systems"]

[workspace.dependencies]
kimchi = { path = "mina/src/lib/crypto/proof-systems/kimchi", default-features = false }
poly-commitment = { path = "mina/src/lib/crypto/proof-systems/poly-commitment", default-features = false }
mina-curves = { path = "mina/src/lib/crypto/proof-systems/curves", default-features = false }
mina-poseidon = { path = "mina/src/lib/crypto/proof-systems/poseidon", default-features = false }
groupmap = { path = "mina/src/lib/crypto/proof-systems/groupmap", default-features = false }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", tag = "v6.1.0" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1", tag = "v6.1.0" }
sp1-build = { git = "https://github.com/succinctlabs/sp1", tag = "v6.1.0" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
ark-ff = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
bytemuck = { version = "1", default-features = false, features = ["derive"] }

# Local SP1 fork that adds Pasta (Pallas + Vesta) executor-level precompiles.
# See ../sp1-pasta-fork. This [patch] overrides the git deps above so every
# sp1-* crate (including transitive ones like sp1-core-executor, sp1-curves)
# is sourced from the local checkout.
[patch."https://github.com/succinctlabs/sp1"]
sp1-zkvm = { path = "../sp1-pasta-fork/crates/zkvm/entrypoint" }
sp1-lib = { path = "../sp1-pasta-fork/crates/zkvm/lib" }
sp1-sdk = { path = "../sp1-pasta-fork/crates/sdk" }
sp1-build = { path = "../sp1-pasta-fork/crates/build" }
sp1-core-executor = { path = "../sp1-pasta-fork/crates/core/executor" }
sp1-curves = { path = "../sp1-pasta-fork/crates/curves" }
sp1-primitives = { path = "../sp1-pasta-fork/crates/primitives" }
