[package]
name = "o1-verifier-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "o1zkvm"
path = "src/main.rs"

[dependencies]
sp1-sdk = { workspace = true, features = ["profiling"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
# Host-side construction of the VerifiableProof from a fixture directory
# (`wire::parse_*` + `convert::OcamlProof::into_verifiable`).
pickles-verifier = { path = "../pickles-verifier" }

[build-dependencies]
sp1-build = { workspace = true }
